welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: type mismatch;
 found   : Unit
 required: Int
      a = 1
        ^withoutDoubles:8: error: type mismatch;
 found   : Unit
 required: Int
      a = a + 1
        ^